[package]
name = "conduit-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Conduit content discovery registry: centralized index standing in for Nostr/DHT"

[dependencies]
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
